# voyager-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
tests/: test_storage.py  test_storage.py.txt
ui.py/: ui.py
voyager_cli/: color.py  colors.py  main.py  storage.py  timer.py  ui.py
voyager_cli/colors.py/: colors.py
voyager_cli/time.py/: time.py
voyager_cli/ui.py/: ui.py
